--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ seaborn = "^0.10.1"
 gensim = "^3.8.3"
 bokeh = "^2.1.0"
 ipykernel = "^5.3.0"
+nltk = "^3.5"
+pyLDAvis = "^2.1.2"
 
 [tool.poetry.dev-dependencies]
 
